--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Challenge: Grouped animals</title>
+        <title>Dank Memes</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         
     </head>
